dep-apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"dep":"apache"},"name":"dep-apache","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"rep-apache"}},"template":{"metadata":{"labels":{"app":"rep-apache"},"name":"tem-apache"},"spec":{"containers":[{"image":"httpd","imagePullPolicy":"IfNotPresent","name":"apache","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: "2023-06-23T10:37:38Z"
  generation: 1
  labels:
    dep: apache
  name: dep-apache
  namespace: default
  resourceVersion: "109446"
  uid: 9e4c81fc-31b3-4f61-a7ed-50e6d8561c80
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rep-apache
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rep-apache
      name: tem-apache
    spec:
      containers:
      - image: httpd
        imagePullPolicy: IfNotPresent
        name: apache
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2023-06-23T10:37:40Z"
    lastUpdateTime: "2023-06-23T10:37:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-06-23T10:37:38Z"
    lastUpdateTime: "2023-06-23T10:37:40Z"
    message: ReplicaSet "dep-apache-774bd5bb67" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
