nginx_env_setting.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"name":"test-nginx","namespace":"default"},"spec":{"containers":[{"image":"nginx:latest","imagePullPolicy":"Never","name":"nginx","ports":[{"containerPort":80}]}]}}
  creationTimestamp: "2023-06-21T16:34:07Z"
  name: test-nginx
  namespace: default
  resourceVersion: "42674"
  uid: 3313ede6-3c87-4bed-bc5e-ded10606305d
spec:
  containers:
  - image: nginx:latest
    imagePullPolicy: Never
    name: nginx
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-78wck
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: node1
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-78wck
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-06-21T16:24:19Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-06-21T16:25:52Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-06-21T16:25:52Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-06-21T16:34:07Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://683073d68d452a12a056d3925cbf12ad3b4f03ae0adee06747ac22035524b4bb
    image: docker.io/library/nginx:latest
    imageID: docker.io/library/nginx@sha256:593dac25b7733ffb7afe1a72649a43e574778bf025ad60514ef40f6b5d606247
    lastState:
      terminated:
        containerID: containerd://4fca953f11a0cbcfeedf7e7625a06c2b371f6ec686c74729f0da2abe011bfd78
        exitCode: 0
        finishedAt: "2023-06-21T16:24:46Z"
        reason: Completed
        startedAt: "2023-06-21T16:24:20Z"
    name: nginx
    ready: true
    restartCount: 1
    started: true
    state:
      running:
        startedAt: "2023-06-21T16:25:52Z"
  hostIP: 10.0.0.2
  phase: Running
  podIP: 10.44.0.1
  podIPs:
  - ip: 10.44.0.1
  qosClass: BestEffort
  startTime: "2023-06-21T16:24:19Z"
