pod-nginx.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-nginx
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
