sp-pod-apache.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: apache
  labels:
    app: web
spec:
  nodeName: node2
  containers:
  - name: apache
    image: httpd
    ports:
    - containerPort: 80
    imagePullPolicy: IfNotPresent
