sp-pod-apache2.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: apache
  labels:
    app: web
spec:
  nodeName: node2
  containers:
  - name: apache
    image: httpd
    ports:
    - containerPort: 80
    imagePullPolicy: IfNotPresent
  - name: alpine
    image: alpine
    command: ["/bin/sh", "-c", "while true; do sleep 1000; done"]
    imagePullPolicy: IfNotPresent
