test_mysql.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  namespace: 1team
  labels:
    app: mysql
spec:
  nodeName: node3  
  containers:
  - name: mysql
    image: mysql:5.7
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 3306
