test_word.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: wordpress
  namespace: 1team
  labels:
    app: mysql
spec:
  nodeName: node2
  containers:
  - name: wordpress
    image: wordpress:5.6
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
