word1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    dep: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rep-word
  template:
    metadata:
      name: tem-wordpress
      labels:
        app: rep-word
    spec:
      containers:
      - name: wordpress
        image: wordpress:5.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
