word_sql.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: word-rep
  namespace: 1team
  labels:
    run: myword
spec:
  containers:
  - name: word
    image: wordpress:5.6
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
  - name: mysql
    image: mysql:5.7
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 3306
