svc-apache.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"run":"apache"},"name":"svc-apache","namespace":"default"},"spec":{"ports":[{"nodePort":31080,"port":8080,"protocol":"TCP","targetPort":80}],"selector":{"app":"rep-apache"},"type":"NodePort"}}
  creationTimestamp: "2023-06-23T10:41:38Z"
  labels:
    run: apache
  name: svc-apache
  namespace: default
  resourceVersion: "111691"
  uid: afe320aa-b245-462e-b6f9-8b41258e9a48
spec:
  clusterIP: 10.110.150.214
  clusterIPs:
  - 10.110.150.214
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31080
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: rep-apache
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
