svc-word_sql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-wordsql
  labels:
    run: word_sql
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 32080
    protocol: TCP
  selector:
    app: rep-word
